<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:backgroundTint="@color/colorAccent"
    android:foregroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtBienvenido"
        android:layout_width="345dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="30dp"
        android:text="@string/txtBienvenido"
        android:textColor="@color/letraBienvenido"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="286dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@android:color/primary_text_light"
        android:ems="10"
        android:hint="@string/edtNombre"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBienvenido" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@android:color/primary_text_light"
        android:ems="10"
        android:hint="@string/edtPass"
        android:inputType="numberPassword"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <Switch
        android:id="@+id/swtUsario"
        android:layout_width="48dp"
        android:layout_height="22dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="272dp"
        android:background="@android:color/background_dark"
        android:backgroundTint="@color/colorAccent"
        android:backgroundTintMode="src_atop"
        android:button="@color/cardview_dark_background"
        android:buttonTint="@android:color/black"
        android:shadowColor="@android:color/background_dark"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_primary_dark"
        android:textColorHighlight="@color/cardview_dark_background"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        android:textColorLink="@color/cardview_dark_background"
        android:textCursorDrawable="@android:color/background_dark"
        android:textDirection="locale"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPass" />

    <TextView
        android:id="@+id/txtRecordarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="224dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/txtRecordarUsuario"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toEndOf="@+id/swtUsario"
        app:layout_constraintTop_toBottomOf="@+id/edtPass" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="77dp"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btnIngresar"
        android:textColor="@color/letraIngresar"
        android:textColorHint="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtUsario" />

    <TextView
        android:id="@+id/txtRegistrar"
        android:layout_width="279dp"
        android:layout_height="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="70dp"
        android:text="@string/txtRegistrar"
        android:textColor="@color/letraBienvenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="106dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ites_1" />

</androidx.constraintlayout.widget.ConstraintLayout>